Updated the login process and adjusted the logic for Google login.